--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ul>
 
     <h3>Meu Hobby Favorito</h3>
-    <img src="Final Fantasy XII.png" width="700" alt="Meu jogo de videogame favorito">
+    <img src="Final Fantasy XII.jpg" width="700" alt="Meu jogo de videogame favorito">
 
     <h2>Países que Gostaria de Visitar</h2>
     <table>
