--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <td><img src="italia.jpg"></td>
             </tr>
             <tr>
-                <td>Canadá</td>
+                <td>Grécia</td>
                 <td><img src="Grecia.jpg"></td>
             </tr>
         </tbody>
